# order-to-cash-denial-reduction

./: .env  .gcloudignore  Dockerfile.backend  Dockerfile.frontend  GCP_DEPLOY_GUIDE.md  README.md  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
billing/: appeals_agent.py  denial_predictor.py  order_agent.py  train_model.py
dashboard/: analytics.py
governance/: sink.py
models/: denial_model.joblib  encoder.joblib
orchestrator/: graph.py
security/: dlp_service.py
streamlit_app/: app.py  demo_data.py  style_utils.py
streamlit_app/pages/: 1_Executive_CFO_Dashboard.py  2_Auditor_HITL_Workspace.py
tests/: test_appeals.py  test_billing.py  test_dashboard.py  test_gateway.py  test_step1_orchestrator.py  test_step2_ml.py  test_step3_rag.py  test_step4_dashboard.py
