[project]
name = "ordertocash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-dlp>=3.37.0",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "langchain-core>=1.4.7",
    "langgraph>=1.2.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
